--- a/web/styles/vars.scss
+++ b/web/styles/vars.scss
@@ -119,6 +119,7 @@ $mobile-easing-smooth: cubic-bezier(
 // =============================================
 // Core brand & semantic palette
 $primary-color: #14a2d2;
+$primary-color-opaque: rgba(20, 163, 210, 0.4);
 $secondary-color: #07aae2;
 $warning-color: #ffcc33;
 $success-color: #00ff99;
