--- a/web/styles/_panel.scss
+++ b/web/styles/_panel.scss
@@ -91,6 +91,7 @@
 // Sticky scroll container for tables
 @mixin panel-scroll-wrapper {
   width: 100%;
+  height: 100%;
   overflow: hidden;
   background: linear-gradient(
     135deg,
